--- a/index.html
+++ b/index.html
@@ -24,5 +24,12 @@
 
   <body>
     <script src="sketch.js"></script>
+    <script src="classes/actor.js"></script>
+    <script src="classes/asteroid.js"></script>
+    <script src="classes/bullet.js"></script>
+    <script src="classes/manager.js"></script>
+    <script src="classes/player.js"></script>
+    <script src="classes/polygon.js"></script>
+    <script src="classes/saucer.js"></script>
   </body>
 </html>
