--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Sketch</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <!-- Linking to the main p5.js library, which allows your code to use all 
        p5 functions. Using this version while developing your code allows p5 
@@ -27,7 +27,6 @@
     <script src="classes/actor.js"></script>
     <script src="classes/asteroid.js"></script>
     <script src="classes/bullet.js"></script>
-    <script src="classes/manager.js"></script>
     <script src="classes/player.js"></script>
     <script src="classes/polygon.js"></script>
     <script src="classes/saucer.js"></script>
