--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
   <body>
     <script src="sketch.js"></script>
-    <script src="classes/actor.js"></script>
-    <script src="classes/asteroid.js"></script>
-    <script src="classes/bullet.js"></script>
-    <script src="classes/player.js"></script>
-    <script src="classes/polygon.js"></script>
-    <script src="classes/saucer.js"></script>
+    <script src="actor.js"></script>
+    <script src="asteroid.js"></script>
+    <script src="bullet.js"></script>
+    <script src="player.js"></script>
+    <script src="polygon.js"></script>
+    <script src="saucer.js"></script>
   </body>
 </html>
